# nirde

client/: Cargo.toml  Trunk.toml  index.html
client/src/: main.rs
client/src/assets/styles/: grid.scss  main.scss
client/src/components/: form.rs  header.rs  mod.rs
client/src/views/: about.rs  contact.rs  home.rs  mod.rs
public/: frontend-8729e06abfdc862a.js  frontend-8729e06abfdc862a_bg.wasm  frontend-e6fccbefd3fd4783.js  frontend-e6fccbefd3fd4783_bg.wasm  index.html  main-abbdbb10d920f035.css
public/assets/styles/: fonts.scss  main.scss
server/: Cargo.toml
server/src/: main.rs
