[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.86"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlHeadElement",
    "HtmlStyleElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    
]
